add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "amplifyapp",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": true,
+  "homepage": "https://github.com/terrymorse58/amplifyapp#readme",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
